bk_ida/expected_expression/expected_expression/g1/display_board
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/display_board/src/utils.c:839:10: error: expected expression
fwrite( &::stream, 1uLL, 0x2CuLL, stream); 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/display_board/src/utils.c:860:10: error: expected expression
fwrite( &::stream._IO_write_end, 1uLL, 0x2CuLL, stream); 
         ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/display_board/src/obj/utils.o] Error 1
